// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpeedGraderHeader anonymizes the avatar and name 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "white",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginTop": 16,
      }
    }
  >
    <View
      style={
        Object {
          "height": 40,
          "marginLeft": 16,
          "width": 40,
        }
      }
    >
      <View
        accessibilityLabel=""
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "height": 40,
              "width": 40,
            },
            Object {
              "borderRadius": 20,
            },
            Object {
              "backgroundColor": "#F5F5F5",
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "uri": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
            }
          }
          style={
            Object {
              "height": 40,
              "width": 40,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "column",
            "justifyContent": "space-between",
            "marginLeft": 12,
          },
          Object {
            "flex": 1,
          },
        ]
      }
    >
      <Text
        accessibilityTraits="header"
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Object {
              "fontSize": 16,
              "fontWeight": "600",
            },
            Object {
              "fontFamily": ".SFUIDisplay-semibold",
            },
          ]
        }
      >
        Student
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "fontSize": 14,
                "paddingTop": 2,
              },
              Object {
                "color": "#07AF1F",
              },
            ],
            Object {
              "fontFamily": ".SFUIDisplay",
            },
          ]
        }
      >
        SUBMITTED
      </Text>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "white",
          "marginRight": 12,
        }
      }
    >
      <TouchableHighlight
        onPress={[Function]}
        testID="header.navigation-done"
        underlayColor="white"
      >
        <View
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Object {
                  "color": "#008EE2",
                  "fontSize": 18,
                  "fontWeight": "600",
                },
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            Done
          </Text>
        </View>
      </TouchableHighlight>
    </View>
  </View>
</View>
`;

exports[`SpeedGraderHeader doesnt show the group name when anonymous 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "white",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginTop": 16,
      }
    }
  >
    <View
      style={
        Object {
          "height": 40,
          "marginLeft": 16,
          "width": 40,
        }
      }
    >
      <View
        accessibilityLabel=""
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "height": 40,
              "width": 40,
            },
            Object {
              "borderRadius": 20,
            },
            Object {
              "backgroundColor": "#F5F5F5",
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "uri": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
            }
          }
          style={
            Object {
              "height": 40,
              "width": 40,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "column",
            "justifyContent": "space-between",
            "marginLeft": 12,
          },
          Object {
            "flex": 1,
          },
        ]
      }
    >
      <Text
        accessibilityTraits="header"
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Object {
              "fontSize": 16,
              "fontWeight": "600",
            },
            Object {
              "fontFamily": ".SFUIDisplay-semibold",
            },
          ]
        }
      >
        Group
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "fontSize": 14,
                "paddingTop": 2,
              },
              Object {
                "color": "#07AF1F",
              },
            ],
            Object {
              "fontFamily": ".SFUIDisplay",
            },
          ]
        }
      >
        SUBMITTED
      </Text>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "white",
          "marginRight": 12,
        }
      }
    >
      <TouchableHighlight
        onPress={[Function]}
        testID="header.navigation-done"
        underlayColor="white"
      >
        <View
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Object {
                  "color": "#008EE2",
                  "fontSize": 18,
                  "fontWeight": "600",
                },
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            Done
          </Text>
        </View>
      </TouchableHighlight>
    </View>
  </View>
</View>
`;

exports[`SpeedGraderHeader doesnt show the student name when anonymous 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "white",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginTop": 16,
      }
    }
  >
    <View
      style={
        Object {
          "height": 40,
          "marginLeft": 16,
          "width": 40,
        }
      }
    >
      <View
        accessibilityLabel=""
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "height": 40,
              "width": 40,
            },
            Object {
              "borderRadius": 20,
            },
            Object {
              "backgroundColor": "#F5F5F5",
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "uri": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
            }
          }
          style={
            Object {
              "height": 40,
              "width": 40,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "column",
            "justifyContent": "space-between",
            "marginLeft": 12,
          },
          Object {
            "flex": 1,
          },
        ]
      }
    >
      <Text
        accessibilityTraits="header"
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Object {
              "fontSize": 16,
              "fontWeight": "600",
            },
            Object {
              "fontFamily": ".SFUIDisplay-semibold",
            },
          ]
        }
      >
        Student
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "fontSize": 14,
                "paddingTop": 2,
              },
              Object {
                "color": "#07AF1F",
              },
            ],
            Object {
              "fontFamily": ".SFUIDisplay",
            },
          ]
        }
      >
        SUBMITTED
      </Text>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "white",
          "marginRight": 12,
        }
      }
    >
      <TouchableHighlight
        onPress={[Function]}
        testID="header.navigation-done"
        underlayColor="white"
      >
        <View
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Object {
                  "color": "#008EE2",
                  "fontSize": 18,
                  "fontWeight": "600",
                },
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            Done
          </Text>
        </View>
      </TouchableHighlight>
    </View>
  </View>
</View>
`;

exports[`SpeedGraderHeader renders with a grade-only submission 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "white",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginTop": 16,
      }
    }
  >
    <View
      style={
        Object {
          "height": 40,
          "marginLeft": 16,
          "width": 40,
        }
      }
    >
      <View
        accessibilityLabel=""
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "height": 40,
              "width": 40,
            },
            Object {
              "borderRadius": 20,
            },
            Object {
              "backgroundColor": "#F5F5F5",
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "uri": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
            }
          }
          style={
            Object {
              "height": 40,
              "width": 40,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "column",
            "justifyContent": "space-between",
            "marginLeft": 12,
          },
          Object {
            "flex": 1,
          },
        ]
      }
    >
      <Text
        accessibilityTraits="header"
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Object {
              "fontSize": 16,
              "fontWeight": "600",
            },
            Object {
              "fontFamily": ".SFUIDisplay-semibold",
            },
          ]
        }
      >
        Allura
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "fontSize": 14,
                "paddingTop": 2,
              },
              Object {
                "color": "#8B969E",
              },
            ],
            Object {
              "fontFamily": ".SFUIDisplay",
            },
          ]
        }
      >
        Not Submitted
      </Text>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "white",
          "marginRight": 12,
        }
      }
    >
      <TouchableHighlight
        onPress={[Function]}
        testID="header.navigation-done"
        underlayColor="white"
      >
        <View
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Object {
                  "color": "#008EE2",
                  "fontSize": 18,
                  "fontWeight": "600",
                },
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            Done
          </Text>
        </View>
      </TouchableHighlight>
    </View>
  </View>
</View>
`;

exports[`SpeedGraderHeader renders with a group submission 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "white",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginTop": 16,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "white",
            "flexDirection": "row",
          }
        }
      >
        <TouchableHighlight
          onPress={[Function]}
          testID="header.groupList.button"
          underlayColor="white"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Object {
                  "height": 40,
                  "marginLeft": 16,
                  "width": 40,
                }
              }
            >
              <View
                accessibilityLabel=""
                style={
                  Array [
                    Object {
                      "overflow": "hidden",
                    },
                    Object {
                      "height": 40,
                      "width": 40,
                    },
                    Object {
                      "borderRadius": 20,
                    },
                    Object {
                      "backgroundColor": "#F5F5F5",
                    },
                  ]
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
                    }
                  }
                  style={
                    Object {
                      "height": 40,
                      "width": 40,
                    }
                  }
                />
              </View>
            </View>
            <View
              style={
                Object {
                  "flexDirection": "column",
                  "justifyContent": "space-between",
                  "marginLeft": 12,
                }
              }
            >
              <Text
                accessibilityTraits="header"
                accessible={true}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "fontSize": 16,
                      "fontWeight": "600",
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-semibold",
                    },
                  ]
                }
              >
                Allura
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Array [
                      Object {
                        "fontSize": 14,
                        "paddingTop": 2,
                      },
                      Object {
                        "color": "#07AF1F",
                      },
                    ],
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                  ]
                }
              >
                SUBMITTED
              </Text>
            </View>
          </View>
        </TouchableHighlight>
      </View>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "white",
          "marginRight": 12,
        }
      }
    >
      <TouchableHighlight
        onPress={[Function]}
        testID="header.navigation-done"
        underlayColor="white"
      >
        <View
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Object {
                  "color": "#008EE2",
                  "fontSize": 18,
                  "fontWeight": "600",
                },
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            Done
          </Text>
        </View>
      </TouchableHighlight>
    </View>
  </View>
</View>
`;

exports[`SpeedGraderHeader renders with a submission 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "white",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginTop": 16,
      }
    }
  >
    <View
      style={
        Object {
          "height": 40,
          "marginLeft": 16,
          "width": 40,
        }
      }
    >
      <View
        accessibilityLabel=""
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "height": 40,
              "width": 40,
            },
            Object {
              "borderRadius": 20,
            },
            Object {
              "backgroundColor": "#F5F5F5",
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "uri": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
            }
          }
          style={
            Object {
              "height": 40,
              "width": 40,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "column",
            "justifyContent": "space-between",
            "marginLeft": 12,
          },
          Object {
            "flex": 1,
          },
        ]
      }
    >
      <Text
        accessibilityTraits="header"
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Object {
              "fontSize": 16,
              "fontWeight": "600",
            },
            Object {
              "fontFamily": ".SFUIDisplay-semibold",
            },
          ]
        }
      >
        Allura
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "fontSize": 14,
                "paddingTop": 2,
              },
              Object {
                "color": "#07AF1F",
              },
            ],
            Object {
              "fontFamily": ".SFUIDisplay",
            },
          ]
        }
      >
        SUBMITTED
      </Text>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "white",
          "marginRight": 12,
        }
      }
    >
      <TouchableHighlight
        onPress={[Function]}
        testID="header.navigation-done"
        underlayColor="white"
      >
        <View
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Object {
                  "color": "#008EE2",
                  "fontSize": 18,
                  "fontWeight": "600",
                },
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            Done
          </Text>
        </View>
      </TouchableHighlight>
    </View>
  </View>
</View>
`;

exports[`SpeedGraderHeader renders with an over-due grade-only submission 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "white",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginTop": 16,
      }
    }
  >
    <View
      style={
        Object {
          "height": 40,
          "marginLeft": 16,
          "width": 40,
        }
      }
    >
      <View
        accessibilityLabel=""
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "height": 40,
              "width": 40,
            },
            Object {
              "borderRadius": 20,
            },
            Object {
              "backgroundColor": "#F5F5F5",
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "uri": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
            }
          }
          style={
            Object {
              "height": 40,
              "width": 40,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "column",
            "justifyContent": "space-between",
            "marginLeft": 12,
          },
          Object {
            "flex": 1,
          },
        ]
      }
    >
      <Text
        accessibilityTraits="header"
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Object {
              "fontSize": 16,
              "fontWeight": "600",
            },
            Object {
              "fontFamily": ".SFUIDisplay-semibold",
            },
          ]
        }
      >
        Allura
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "fontSize": 14,
                "paddingTop": 2,
              },
              Object {
                "color": "#EE0612",
              },
            ],
            Object {
              "fontFamily": ".SFUIDisplay",
            },
          ]
        }
      >
        MISSING
      </Text>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "white",
          "marginRight": 12,
        }
      }
    >
      <TouchableHighlight
        onPress={[Function]}
        testID="header.navigation-done"
        underlayColor="white"
      >
        <View
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Object {
                  "color": "#008EE2",
                  "fontSize": 18,
                  "fontWeight": "600",
                },
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            Done
          </Text>
        </View>
      </TouchableHighlight>
    </View>
  </View>
</View>
`;

exports[`SpeedGraderHeader renders with no submission 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "white",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginTop": 16,
      }
    }
  >
    <View
      style={
        Object {
          "height": 40,
          "marginLeft": 16,
          "width": 40,
        }
      }
    >
      <View
        accessibilityLabel=""
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "height": 40,
              "width": 40,
            },
            Object {
              "borderRadius": 20,
            },
            Object {
              "backgroundColor": "#F5F5F5",
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "uri": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
            }
          }
          style={
            Object {
              "height": 40,
              "width": 40,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "column",
            "justifyContent": "space-between",
            "marginLeft": 12,
          },
          Object {
            "flex": 1,
          },
        ]
      }
    >
      <Text
        accessibilityTraits="header"
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Object {
              "fontSize": 16,
              "fontWeight": "600",
            },
            Object {
              "fontFamily": ".SFUIDisplay-semibold",
            },
          ]
        }
      >
        Allura
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "fontSize": 14,
                "paddingTop": 2,
              },
              Object {
                "color": "#8B969E",
              },
            ],
            Object {
              "fontFamily": ".SFUIDisplay",
            },
          ]
        }
      >
        Not Submitted
      </Text>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "white",
          "marginRight": 12,
        }
      }
    >
      <TouchableHighlight
        onPress={[Function]}
        testID="header.navigation-done"
        underlayColor="white"
      >
        <View
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Object {
                  "color": "#008EE2",
                  "fontSize": 18,
                  "fontWeight": "600",
                },
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            Done
          </Text>
        </View>
      </TouchableHighlight>
    </View>
  </View>
</View>
`;
